src/tirateima/parser/TiraTeimaParser.java
/* Generated By:JavaCC: Do not edit this line. TiraTeimaParser.java */
package tirateima.parser;

import java.awt.Color;
import java.awt.Dimension;
import java.awt.Point;
import java.util.ArrayList;
import java.util.List;
import java.util.ListIterator;
import java.util.Stack;

import tirateima.gerador.CommandAttribution;
import tirateima.gerador.CommandNewType;
import tirateima.gerador.CommandNewVar;
import tirateima.gerador.CommandNewVarText;
import tirateima.gerador.FunctionDeclaration;
import tirateima.gerador.CommandStartFunction;
import tirateima.gerador.CommandEndFunction;
import tirateima.gerador.CommandOperationCall;
import tirateima.gerador.Index;
import tirateima.gerador.Step;
import tirateima.gerador.Type;
import tirateima.gerador.TypeId;
import tirateima.gerador.VarDefinition;

public class TiraTeimaParser implements TiraTeimaParserConstants {
        private String tratarString(String s) {
                char chars[] = s.toCharArray();
                StringBuffer buffer = new StringBuffer();

                //ignora as aspas
                int lim = chars.length - 1;
                for(int i = 1; i < lim; i++) {
                        if (chars[i] == '\\') {
                                switch (chars[++i]) {
                                        case '\\':
                                                buffer.append('\\');
                                                break;
                                        case 't':
                                                buffer.append('\t');
                                                break;
                                        case 'n':
                                                buffer.append('\n');
                                                break;
                                        case 'r':
                                                buffer.append('\r');
                                                break;
                                        case '"':
                                                buffer.append('"');
                                                break;
                                }
                        } else {
                                buffer.append(chars[i]);
                        }
                }

                return buffer.toString();
        }

        private Character tratarChar(String s) {
                char chars[] = s.toCharArray();

                //ignora as aspas
                char c = chars[1];
                if (c == '\\') {
                        switch (chars[2]) {
                                case '\\':
                                        c = '\\';
                                        break;
                                case 't':
                                        c = '\t';
                                        break;
                                case 'n':
                                        c = '\n';
                                        break;
                                case 'r':
                                        c = '\r';
                                        break;
                                case '\'':
                                        c = '\'';
                                        break;
                        }
                }

                return new Character(c);
        }

/* Um passo é uma indicação de linha seguida de um comando:
   [line] <nro linha> <comando> */
  final public Step step() throws ParseException {
        Token t;
        Step p;
    if (jj_2_2(2)) {
      if (jj_2_1(2)) {
        jj_consume_token(KW_LINE);
      } else {
        ;
      }
      t = jj_consume_token(INT_NUMBER);
                                   p = new Step(Integer.parseInt(t.image));
      command(p);
                           {if (true) return p;}
    } else if (jj_2_3(2)) {
      jj_consume_token(0);
                      {if (true) return null;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/* Um comando é um dos comandos básicos ou é um bloco de comandos */
  final public void command(Step p) throws ParseException {
    if (jj_2_4(2)) {
      jj_consume_token(SEMICOLON);
    } else if (jj_2_5(2)) {
      cmd_new_type(p);
    } else if (jj_2_6(2)) {
      cmd_new_var(p);
    } else if (jj_2_7(2)) {
      cmd_atrib(p);
    } else if (jj_2_8(2)) {
      cmd_new_file(p);
    } else if (jj_2_9(2)) {
      function_declaration(p);
    } else if (jj_2_10(2)) {
      function_start(p);
    } else if (jj_2_11(2)) {
      function_end(p);
    } else if (jj_2_12(2)) {
      operation_call(p);
    } else if (jj_2_13(2)) {
      bloco(p);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void cmd_new_type(Step p) throws ParseException {
        Token t_name;
        String name;
        List<VarDefinition> aux, fields;
    jj_consume_token(KW_RECORD);
                     fields = new ArrayList<VarDefinition>();
    t_name = jj_consume_token(IDENTIFIER);
                                 name = t_name.image;
    jj_consume_token(OPEN_BRACE);
    label_1:
    while (true) {
      aux = new_vars();
                 fields.addAll(aux);
      if (jj_2_14(2)) {
        ;
      } else {
        break label_1;
      }
    }
    jj_consume_token(CLOSE_BRACE);
                 p.addCommand(new CommandNewType(name, fields));
  }

  final public List<VarDefinition> new_vars() throws ParseException {
        Type type;
        VarDefinition v;
        List<VarDefinition> vars = new ArrayList<VarDefinition>();
    type = type();
    v = new_var(type);
                          vars.add(v);
    label_2:
    while (true) {
      if (jj_2_15(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(COMMA);
      v = new_var(type);
                                  vars.add(v);
    }
    jj_consume_token(SEMICOLON);
                    {if (true) return vars;}
    throw new Error("Missing return statement in function");
  }

  final public Type type() throws ParseException {
        Token t;
    if (jj_2_16(2)) {
      t = jj_consume_token(KW_INT);
                               {if (true) return new Type(TypeId.INTEGER);}
    } else if (jj_2_17(2)) {
      t = jj_consume_token(KW_REAL);
                                {if (true) return new Type(TypeId.REAL);}
    } else if (jj_2_18(2)) {
      t = jj_consume_token(KW_CHAR);
                                {if (true) return new Type(TypeId.CHAR);}
    } else if (jj_2_19(2)) {
      t = jj_consume_token(KW_STRING);
                                  {if (true) return new Type(TypeId.STRING);}
    } else if (jj_2_20(2)) {
      t = jj_consume_token(KW_BOOLEAN);
                                   {if (true) return new Type(TypeId.BOOLEAN);}
    } else if (jj_2_21(2)) {
      t = jj_consume_token(IDENTIFIER);
                                   {if (true) return new Type(TypeId.RECORD, t.image);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public VarDefinition new_var(Type type) throws ParseException {
        Token t_name_var;
        Index i = null;
        Color color = null;
        Color colorOutside = null;
        Dimension dimension = null;
        Point posicao = null;
    t_name_var = jj_consume_token(IDENTIFIER);
    if (jj_2_22(2)) {
      i = index();
    } else {
      ;
    }
    if (jj_2_23(2)) {
      color = cor();
    } else {
      ;
    }
    if (jj_2_24(2)) {
      colorOutside = corExterna();
    } else {
      ;
    }
    if (jj_2_25(2)) {
      dimension = dimensao();
    } else {
      ;
    }
    if (jj_2_26(2)) {
      posicao = posicao();
    } else {
      ;
    }
                {if (true) return new VarDefinition(type, t_name_var.image, i, color, colorOutside, dimension, posicao);}
    throw new Error("Missing return statement in function");
  }

  final public Color cor() throws ParseException {
        Token t_value;
        int r=0;
        int g=0;
        int b=0;
    jj_consume_token(KW_COLOR);
    jj_consume_token(OPEN_PAR);
    t_value = jj_consume_token(INT_NUMBER);
                r = Integer.parseInt(t_value.image);
    jj_consume_token(COMMA);
    t_value = jj_consume_token(INT_NUMBER);
                g = Integer.parseInt(t_value.image);
    jj_consume_token(COMMA);
    t_value = jj_consume_token(INT_NUMBER);
                b = Integer.parseInt(t_value.image);
    jj_consume_token(CLOSE_PAR);
                    {if (true) return new Color(r,g,b);}
    throw new Error("Missing return statement in function");
  }

  final public Color corExterna() throws ParseException {
        Token t_value;
        int r=0;
        int g=0;
        int b=0;
    jj_consume_token(KW_COLOR_INSIDE);
    jj_consume_token(OPEN_PAR);
    t_value = jj_consume_token(INT_NUMBER);
                r = Integer.parseInt(t_value.image);
    jj_consume_token(COMMA);
    t_value = jj_consume_token(INT_NUMBER);
                g = Integer.parseInt(t_value.image);
    jj_consume_token(COMMA);
    t_value = jj_consume_token(INT_NUMBER);
                b = Integer.parseInt(t_value.image);
    jj_consume_token(CLOSE_PAR);
                    {if (true) return new Color(r,g,b);}
    throw new Error("Missing return statement in function");
  }

  final public Dimension dimensao() throws ParseException {
        Token t_value;
        int largura=0;
        int altura=0;
    jj_consume_token(KW_DIMENSION);
    jj_consume_token(OPEN_PAR);
    t_value = jj_consume_token(INT_NUMBER);
                largura = Integer.parseInt(t_value.image);
    jj_consume_token(COMMA);
    t_value = jj_consume_token(INT_NUMBER);
                altura = Integer.parseInt(t_value.image);
    jj_consume_token(CLOSE_PAR);
                    {if (true) return new Dimension(largura,altura);}
    throw new Error("Missing return statement in function");
  }

  final public Point posicao() throws ParseException {
        Token t_value;
        int x=0;
        int y=0;
    jj_consume_token(KW_POSITION);
    jj_consume_token(OPEN_PAR);
    t_value = jj_consume_token(INT_NUMBER);
                x = Integer.parseInt(t_value.image);
    jj_consume_token(COMMA);
    t_value = jj_consume_token(INT_NUMBER);
                y = Integer.parseInt(t_value.image);
    jj_consume_token(CLOSE_PAR);
                    {if (true) return new Point(x,y);}
    throw new Error("Missing return statement in function");
  }

  final public Index index() throws ParseException {
        Token t_value;
        Index result = new Index();
    jj_consume_token(OPEN_BRACKET);
    t_value = jj_consume_token(INT_NUMBER);
                result.first = Integer.parseInt(t_value.image);
    if (jj_2_27(2)) {
      jj_consume_token(COMMA);
      t_value = jj_consume_token(INT_NUMBER);
                result.second = Integer.parseInt(t_value.image);
                result.isMatrix = true;
    } else {
      ;
    }
    jj_consume_token(CLOSE_BRACKET);
                        {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  final public void cmd_new_var(Step p) throws ParseException {
        List<VarDefinition> vars;
    vars = new_vars();
                ListIterator<VarDefinition> i = vars.listIterator();
                while (i.hasNext()) {
                        p.addCommand(new CommandNewVar(i.next()));
                }
  }

  final public void cmd_atrib(Step p) throws ParseException {
        Stack<Object> var_stack = new Stack<Object>();
        Object value;
    variavel(var_stack);
    jj_consume_token(ATTRIBUTION);
    value = constant();
    jj_consume_token(SEMICOLON);
                p.addCommand(new CommandAttribution(var_stack, value));
  }

  final public void variavel(Stack<Object> var_stack) throws ParseException {
        Token t_name;
        Index i;
    t_name = jj_consume_token(IDENTIFIER);
                                var_stack.push(t_name.image);
    label_3:
    while (true) {
      if (jj_2_28(2)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_29(2)) {
        i = index();
                              var_stack.push(i);
      } else if (jj_2_30(2)) {
        jj_consume_token(DOT);
        t_name = jj_consume_token(IDENTIFIER);
                                                var_stack.push(t_name.image);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public Object constant() throws ParseException {
        Token t;
    if (jj_2_31(2)) {
      t = jj_consume_token(INT_NUMBER);
                {if (true) return Integer.parseInt(t.image);}
    } else if (jj_2_32(2)) {
      t = jj_consume_token(FLOAT_NUMBER);
                {if (true) return Double.parseDouble(t.image);}
    } else if (jj_2_33(2)) {
      t = jj_consume_token(STRING_LITERAL);
                {if (true) return tratarString(t.image);}
    } else if (jj_2_34(2)) {
      t = jj_consume_token(CHAR_LITERAL);
                {if (true) return tratarChar(t.image);}
    } else if (jj_2_35(2)) {
      t = jj_consume_token(KW_TRUE);
                {if (true) return new Boolean(true);}
    } else if (jj_2_36(2)) {
      t = jj_consume_token(KW_FALSE);
                {if (true) return new Boolean(false);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void cmd_new_file(Step p) throws ParseException {
        Token t_name;
    jj_consume_token(KW_TEXT);
    t_name = jj_consume_token(IDENTIFIER);
                                p.addCommand(new CommandNewVarText(t_name.image));
    label_4:
    while (true) {
      if (jj_2_37(2)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(COMMA);
      t_name = jj_consume_token(IDENTIFIER);
                                       p.addCommand(new CommandNewVarText(t_name.image));
    }
    jj_consume_token(SEMICOLON);
  }

  final public void function_declaration(Step p) throws ParseException {
        Token t_name;
        Type type;
        List<VarDefinition> param;
        List<VarDefinition> local_vars;
    jj_consume_token(KW_FUNCTION);
    t_name = jj_consume_token(IDENTIFIER);
    jj_consume_token(OPEN_PAR);
    param = param_list();
    jj_consume_token(CLOSE_PAR);
    jj_consume_token(COLON);
    type = function_type();
    local_vars = local_vars_block();
                p.addCommand(new FunctionDeclaration(
                        t_name.image, param, type, local_vars));
  }

  final public List<VarDefinition> param_list() throws ParseException {
        List<VarDefinition> aux;
        List<VarDefinition> vars = new ArrayList<VarDefinition>();
    label_5:
    while (true) {
      if (jj_2_38(2)) {
        ;
      } else {
        break label_5;
      }
      aux = new_vars();
                        vars.addAll(aux);
    }
         {if (true) return vars;}
    throw new Error("Missing return statement in function");
  }

  final public Type function_type() throws ParseException {
        Token t;
    if (jj_2_39(2)) {
      t = jj_consume_token(KW_INT);
                               {if (true) return new Type(TypeId.INTEGER);}
    } else if (jj_2_40(2)) {
      t = jj_consume_token(KW_REAL);
                                {if (true) return new Type(TypeId.REAL);}
